--- a/deploy/gatekeeper.yaml
+++ b/deploy/gatekeeper.yaml
@@ -2428,6 +2428,7 @@ spec:
         - --operation=mutation-status
         - --logtostderr
         - --disable-opa-builtin={http.send}
+        - --emit-audit-events
         command:
         - /manager
         env:
@@ -2532,6 +2533,7 @@ spec:
         - --operation=webhook
         - --operation=mutation-webhook
         - --disable-opa-builtin={http.send}
+        - --emit-admission-events
         command:
         - /manager
         env:
